2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added changeGlobalOption command. Currently,
	max-overall-download-limit and max-overall-upload-limit option are
	available.
	* src/RequestGroupMan.h
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added changeOption command. Currently, max-download-limit,
	max-upload-limit option are available in this command.
	* src/RequestGroup.h
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added purgeDownloadResult command.
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refactored.
	* src/XmlRpcMethod.cc

2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added XmlRpcResponse class. XmlRpcMethod::execute() now returns
	XmlRpcResponse.
	* src/HttpServerBodyCommand.cc
	* src/Makefile.am
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcResponse.cc
	* src/XmlRpcResponse.h
	* test/XmlRpcMethodTest.cc

2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	In XML-RPC option struct, header and index-out option can take
	array as value.
	* src/XmlRpcMethod.cc

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused option member from PeerConnection.
	* src/InitiatorMSEHandshakeCommand.cc
	* src/PeerConnection.cc
	* src/PeerConnection.h
	* src/PeerInteractionCommand.cc
	* src/PeerReceiveHandshakeCommand.cc
	* src/ReceiverMSEHandshakeCommand.cc

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
